# setquant

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
reference/: symbol_aliases.csv  universe_set100.csv
research/: experiments.csv  preregistrations.md
research/paper/: main.tex  references.bib
research/paper/tables/: cost_sensitivity.tex  coverage_gaps.tex  main_results.tex  registry.tex  subperiods.tex
research/runs/: 20260705-214914-208b2a.csv  20260707-053508-db2e66.csv
scripts/: build_warehouse.py  ingest_pilot.py  make_paper_assets.py  paper_trade.py  parse_universe_pdfs.py  query_demo.py  run_momentum.py
src/setquant/: __init__.py  config.py  universe.py
src/setquant/backtest/: __init__.py  engine.py  live.py  metrics.py
src/setquant/ingest/: yahoo.py
src/setquant/research/: __init__.py
src/setquant/warehouse/: coverage.py  db.py  gold.py  silver.py
tests/: conftest.py  test_backtest.py  test_coverage.py  test_gold.py  test_ingest.py  test_live.py  test_silver.py  test_universe.py  test_warehouse.py
