[project]
name = "setquant"
version = "0.1.0"
description = "Point-in-time data pipeline and backtest research on Thai equities (SET)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "duckdb>=0.10",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
